# ai_project_estimation

./: .env.example  README.md  main.py  pyproject.toml  streamlit_app.py
app/: config.py  main.py
app/context/: examples.py
app/prompts/: loader.py  test_prompt_loader.py
app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
app/routers/: estimations.py
app/schemas/: estimations.py  schemas.py
app/services/: llm_service.py  pricing.py
pages/: home.py
