[project]
name = "estimador-cag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "fastapi>=0.136.3",
    "numpy",
    "openai>=2.40.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "streamlit",
    "structlog",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["app/prompts"]
pythonpath = ["."]
